--- a/javascript-snippets/index.html
+++ b/javascript-snippets/index.html
@@ -7,6 +7,6 @@
   <body>
     <h3>Run the JavaScript Developer Console to see the output of the files.</h3>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="chapter-one.js"></script>
+    <script src="chapter-two.js"></script>
   </body>
 </html>
