--- a/javascript-applications/simon-says/index.html
+++ b/javascript-applications/simon-says/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Simon Says</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="button-container">
