--- a/javascript-applications/simon-says/index.html
+++ b/javascript-applications/simon-says/index.html
@@ -12,5 +12,6 @@
       <div class="game-button" id="yellow"></div>
       <div class="game-button" id="blue"></div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
