added innerHTML text and styling for JavaScript manipulation

--- a/javascript-applications/simon-says/index.html
+++ b/javascript-applications/simon-says/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <div id="button-container">
-      <div class="game-button" id="green"></div>
-      <div class="game-button" id="red"></div>
-      <div class="game-button" id="yellow"></div>
-      <div class="game-button" id="blue"></div>
+      <div class="game-button" id="green">green</div>
+      <div class="game-button" id="red">red</div>
+      <div class="game-button" id="yellow">yellow</div>
+      <div class="game-button" id="blue">blue</div>
     </div>
     <script src="index.js"></script>
   </body>
