added CSS styling to the form; created an attribute presence combinator example

--- a/css-snippets/selectors/index.html
+++ b/css-snippets/selectors/index.html
@@ -57,15 +57,17 @@
         </p>
         <p>
           <label for="state">State</label>
-          <input type="text" name="state" id="state" placeholder="ex: CA" maxlength="2" pattern="[A-Z]{2}" size="2">
+          <input type="text" name="state" id="state" placeholder="CA" maxlength="2" pattern="[A-Z]{2}" size="2">
         </p>
         <p>
           <label for="zipcode">ZIP</label>
-          <input type="text" name="zipcode" id="zipcode" placeholder="ex: 12345" maxlength="5" pattern="[0-9]{5}" size="5">
+          <input type="text" name="zipcode" id="zipcode" placeholder="12345" maxlength="5" pattern="[0-9]{5}" size="5">
         </p>
       </fieldset>
       <br>
       <button type="submit">Buy Tickets</button>
     </form>
+    <br>
+    <a href="http://example.com/" rel="external friend">Bob</a>
   </body>
 </html>
