added a hyphenated attribute combinator example

--- a/css-snippets/selectors/index.html
+++ b/css-snippets/selectors/index.html
@@ -67,7 +67,18 @@
       <br>
       <button type="submit">Buy Tickets</button>
     </form>
+    <hr>
     <br>
     <a href="http://example.com/" rel="external friend">Bob</a>
+    <br><br>
+    <hr>
+    <br>
+    <p lang="fr-FR">
+      <q>Tout le monde.</q>
+    </p>
+    <p>
+      <q>All the world</q>, or <q>Everyone</q>
+    </p>
+    <br><br>
   </body>
 </html>
