added an hyphenated attribute CSS example with simple articles

--- a/css-snippets/selectors/index.html
+++ b/css-snippets/selectors/index.html
@@ -79,6 +79,32 @@
     <p>
       <q>All the world</q>, or <q>Everyone</q>
     </p>
-    <br><br>
+    <br>
+    <hr>
+    <br>
+    <article class="article-promo">
+      <h3>U.S. Ratifies Kyoto Protocol</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing
+      </p>
+    </article>
+    <article class="article-promo-entertainment">
+      <h3>Kardashian Wests welcome South to the world</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing
+      </p>
+    </article>
+    <article class="article-promo-sports">
+      <h3>New York Knicks win NBA title</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing
+      </p>
+    </article>
+    <article class="article-promo-business">
+      <h3>Google buys EverythingOnTheInternet.com</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing
+      </p>
+    </article>
   </body>
 </html>
