added more pseudo-class CSS styling examples

--- a/css-snippets/selectors/index.html
+++ b/css-snippets/selectors/index.html
@@ -106,5 +106,39 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing
       </p>
     </article>
+    <br>
+    <hr>
+    <br>
+    <form method="post" action="#">
+      <fieldset>
+        <legend>Change Your Password</legend>
+        <p>
+          <label for="password">Enter a new password</label>
+          <input type="password" name="password" id="password">
+        </p>
+        <p>
+          <label for="confirm-password">Retype your password</label>
+          <input type="password" name="confirm-password" id="confirm-password">
+        </p>
+        <p class="help-text">Longer passwords are stronger.</p>
+        <p>
+          <button type="submit">Save changes</button>
+        </p>
+      </fieldset>
+    </form>
+    <br>
+    <hr>
+    <br>
+    <div id="paragraph-example">
+      <p>
+        &#8220;Lorem ipsum dolor sit amet, consectetur adipisicing
+      </p>
+      <p>
+        Proin condimentum elit sapien, ut tempor nisi porta
+      </p>
+    </div>
+    <br>
+    <hr>
+    <br>
   </body>
 </html>
