last batch of CSS pseudo selector examples

--- a/css-snippets/selectors/index.html
+++ b/css-snippets/selectors/index.html
@@ -140,5 +140,51 @@
     <br>
     <hr>
     <br>
+    <form method="post" action="#">
+      <h1>Join the Cool Kids Club</h1>
+      <p>
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" required>
+      </p>
+      <p>
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email" required>
+      </p>
+      <fieldset>
+        <legend>Receive a digest?</legend>
+        <p>
+          <input type="radio" name="digest" id="daily">
+          <label for="daily" class="label-radio">Daily</label>
+          <input type="radio" name="digest" id="weekly">
+          <label for="weekly" class="label-radio">Weekly</label>
+        </p>
+      </fieldset>
+      <button type="submit">Buy Tickets</button>
+    </form>
+    <br>
+    <hr>
+    <br>
+    <h2>List of fruits</h2>
+    <ul id="fruits">
+      <li>Apples</li>
+      <li>Bananas</li>
+      <li>Blueberries</li>
+      <li>Oranges</li>
+      <li>Strawberries</li>
+    </ul>
+    <ul id="vegetables">
+      <li>Corn</li>
+      <li>Beans</li>
+      <li>Squash</li>
+      <li>Brocolli</li>
+      <li>Lettuce</li>
+    </ul>
+    <ul id="cars">
+      <li>Mercedes</li>
+    </ul>
+    <ul id="boats">
+      <li>Canoe</li>
+      <li>Raft</li>
+    </ul>
   </body>
 </html>
