created CSS styling rules to follow the 'avoid global selectors' rule

--- a/css-snippets/clean-css-practices/index.html
+++ b/css-snippets/clean-css-practices/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <section class="dialog">
-      <button type="button" class="close">Close</button>
+      <button type="button" class="default close">Close</button>
     </section>
   </body>
 </html>
