added examples for selector specificity and class chaining

--- a/css-snippets/clean-css-practices/index.html
+++ b/css-snippets/clean-css-practices/index.html
@@ -9,5 +9,6 @@
     <section class="dialog">
       <button type="button" class="default close">Close</button>
     </section>
+    <p class="message error">An error occurred.</p>
   </body>
 </html>
