added an example for avoiding id selectors

--- a/css-snippets/clean-css-practices/index.html
+++ b/css-snippets/clean-css-practices/index.html
@@ -10,5 +10,9 @@
       <button type="button" class="default close">Close</button>
     </section>
     <p class="message error">An error occurred.</p>
+    <div class="sidebar">
+      <div class="sports">Sports</div>
+      <div class="local">Local</div>
+    </div>
   </body>
 </html>
