added a semantic CSS example

--- a/css-snippets/clean-css-practices/index.html
+++ b/css-snippets/clean-css-practices/index.html
@@ -14,5 +14,7 @@
       <div class="sports">Sports</div>
       <div class="local">Local</div>
     </div>
+    <p class="message-error">Error message</p>
+    <p class="message-info">Info message</p>
   </body>
 </html>
