added underscore methods to the collections.js file (incomplete)

--- a/javascript-framework-examples/underscore-js/index.html
+++ b/javascript-framework-examples/underscore-js/index.html
@@ -7,5 +7,6 @@
   <body>
     
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="collections.js"></script>
   </body>
 </html>
