--- a/javascript-framework-examples/underscore-js/index.html
+++ b/javascript-framework-examples/underscore-js/index.html
@@ -7,6 +7,7 @@
   <body>
     
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="collections.js"></script>
+    <!-- <script src="collections.js"></script> -->
+    <script src="arrays.js"></script>
   </body>
 </html>
