--- a/javascript-framework-examples/underscore-js/index.html
+++ b/javascript-framework-examples/underscore-js/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="collections.js"></script> -->
     <!-- <script src="arrays.js"></script> -->
     <!-- <script src="functions.js"></script> -->
-    <script src="objects.js"></script>
+    <!-- <script src="objects.js"></script> -->
+    <script src="utility.js"></script>
   </body>
 </html>
