added a formal application definition with a controller

--- a/javascript-framework-examples/angular-js/w3c-samples/example-two/index.html
+++ b/javascript-framework-examples/angular-js/w3c-samples/example-two/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="">
   <head>
     <meta charset="utf-8">
-    <title>Example One</title>
+    <title>Example Two</title>
   </head>
   <body>
     <label>Enter your name</label>
