renamed directories for consistency and added an AngularJS scope example

--- a/javascript-framework-examples/angular-js/w3c-samples/example-six/index.html
+++ b/javascript-framework-examples/angular-js/w3c-samples/example-six/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Example Five</title>
+    <title>Example Six</title>
   </head>
   <body>
     <div ng-app="myApp" ng-controller="myCtrl">
