added angular examples for forms; implemented object value binding with selection inputs

--- a/javascript-framework-examples/angular-js/w3c-samples/example-11/index.html
+++ b/javascript-framework-examples/angular-js/w3c-samples/example-11/index.html
@@ -23,6 +23,7 @@
     <div ng-app="TableApplication" ng-controller="CustomersController">
       <table>
         <tr ng-repeat="n in names">
+          <td>{{$index + 1}}</td>
           <td>{{n.Name}}</td>
           <td>{{n.Country}}</td>
         </tr>
