added an angular events example

--- a/javascript-framework-examples/angular-js/w3c-samples/example-13/index.html
+++ b/javascript-framework-examples/angular-js/w3c-samples/example-13/index.html
@@ -18,6 +18,7 @@
       <p ng-show="false">This text is not visible</p>
       <p ng-show="true">This text is visible</p>
       <p ng-show="value >= 12">This text is visible because $scope.value = {{value}}</p>
+      <p ng-show="value < 12">This text is not visible becauuse $scope.v</p>
     </div>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
     <script>
