added an update function to the quiz project for DOM manipulation (minor display bug needs fixing)

--- a/js-novice-to-ninja/quiz-ninja-project/index.html
+++ b/js-novice-to-ninja/quiz-ninja-project/index.html
@@ -10,7 +10,10 @@
   <body>
     <header>
       <h1>Quiz Ninja</h1>
+      <p>Score: <strong id="score">0</strong></p>
     </header>
+    <section id="question"></section>
+    <section id="feedback"></section>
     <script src="scripts.js"></script>
   </body>
 </html>
