added a start button and associated event handler to the quiz project

--- a/js-novice-to-ninja/quiz-ninja-project/index.html
+++ b/js-novice-to-ninja/quiz-ninja-project/index.html
@@ -14,6 +14,9 @@
     </header>
     <section id="question"></section>
     <section id="feedback"></section>
+    
+    <button id="start">Click to play Quiz Ninja!</button>
+    
     <script src="scripts.js"></script>
   </body>
 </html>
