added document writing examples and cookie/interval functionality examples

--- a/js-novice-to-ninja/bom/index.html
+++ b/js-novice-to-ninja/bom/index.html
@@ -5,6 +5,11 @@
     <title>Browser Object Model Examples</title>
   </head>
   <body>
+    <!--
+    <h1>
+      <script>document.write("Hello World!");</script>
+    </h1>
+    -->
     <script src="scripts.js"></script>
   </body>
 </html>
