added a smoother square rotation (requestAnimationFrame usage); added a CSS-animated rectangle

--- a/js-novice-to-ninja/animation/index.html
+++ b/js-novice-to-ninja/animation/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="square"></div>
+    <div id="rectangle"></div>
     <script src="scripts.js"></script>
   </body>
 </html>
