added a timer to the quiz project; added some CSS styles and answer (input) fixes (lowercasing for equality)

--- a/js-novice-to-ninja/quiz-ninja-project/index.html
+++ b/js-novice-to-ninja/quiz-ninja-project/index.html
@@ -12,8 +12,8 @@
       <h1>Quiz Ninja</h1>
       <p>Score: <strong id="score">0</strong></p>
     </header>
+    <p id="timer"></p>
     <section id="question"></section>
-    
     <form id="answer">
       <input type="text">
       <button>Submit Answer</button>
