minor CSS tweaks and interval color-change fixes

--- a/js-novice-to-ninja/quiz-ninja-project/index.html
+++ b/js-novice-to-ninja/quiz-ninja-project/index.html
@@ -15,7 +15,7 @@
     <p id="timer"></p>
     <section id="question"></section>
     <form id="answer">
-      <input type="text">
+      <input type="text" autofocus>
       <button>Submit Answer</button>
     </form>
     
