added a square to circle animation (transformation)

--- a/css-snippets/animation/index.html
+++ b/css-snippets/animation/index.html
@@ -9,5 +9,8 @@
     <div id="square"></div>
     <br />
     <div id="circle"></div>
+    <br />
+    <!-- Square to Circle example -->
+    <div id="transforming"></div>
   </body>
 </html>
