added a text example (bounce in)

--- a/css-snippets/animation/index.html
+++ b/css-snippets/animation/index.html
@@ -12,5 +12,10 @@
     <br />
     <!-- Square to Circle example -->
     <div id="transforming"></div>
+    <br />
+    <!-- Text based example -->
+    <div id="promo">
+      BOUNCE IN
+    </div>
   </body>
 </html>
