added some basic table CSS

--- a/javascript-applications/text-analyzer/index.html
+++ b/javascript-applications/text-analyzer/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Text Analyzer</title>
+    <style>
+      table {
+        border: 1px solid black;
+        border-collapse: collapse;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <header>
