added a random name generator to use with a template string

--- a/javascript-framework-examples/backbone-js/hello-world/index.html
+++ b/javascript-framework-examples/backbone-js/hello-world/index.html
@@ -18,12 +18,16 @@
         var AppView = Backbone.View.extend({
           el: '#container',
 
+          randomNames: ['James', 'Karen', 'Daniel', 'Thomas'],
+
+          template: _.template("<h3>Hello <%= who %></h3>"),
+
           initialize: function () {
             this.render();
           },
 
           render: function () {
-            this.$el.html("Hello World!");
+            this.$el.html(this.template({who: this.randomNames[Math.floor(Math.random() * 4)]}));
           }
         }),
           appView = new AppView();
