--- a/javascript-framework-examples/backbone-marionette-app/contact-app/index.html
+++ b/javascript-framework-examples/backbone-marionette-app/contact-app/index.html
@@ -28,5 +28,7 @@
     <script src="./assets/js/vendor/underscore.min.js"></script>
     <script src="./assets/js/vendor/backbone.min.js"></script>
     <script src="./assets/js/vendor/backbone.marionette.min.js"></script>
+
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
