added a basic model for contacts and rendered it through a view

--- a/javascript-framework-examples/backbone-marionette-app/contact-app/index.html
+++ b/javascript-framework-examples/backbone-marionette-app/contact-app/index.html
@@ -32,6 +32,13 @@
       </p>
     </script>
 
+    <script type="text/template" id="contact-template">
+      <p>
+        <%= firstName %>
+        <%= lastName %>
+      </p>
+    </script>
+
     <script src="./assets/js/vendor/jquery.min.js"></script>
     <script src="./assets/js/vendor/json2.min.js"></script>
     <script src="./assets/js/vendor/underscore.min.js"></script>
