added a collection view and rendered sample contacts using the <li> tag

--- a/javascript-framework-examples/backbone-marionette-app/contact-app/index.html
+++ b/javascript-framework-examples/backbone-marionette-app/contact-app/index.html
@@ -32,12 +32,8 @@
       </p>
     </script>
 
-    <script type="text/template" id="contact-template">
-      <p>
-        <%= firstName %>
-        <%= lastName %>
-        <%= phoneNumber %>
-      </p>
+    <script type="text/template" id="contact-list-item">
+      <%= firstName %> <%= lastName %>: <%= phoneNumber %>
     </script>
 
     <script src="./assets/js/vendor/jquery.min.js"></script>
