--- a/javascript-framework-examples/backbone-js/surfboards/index.html
+++ b/javascript-framework-examples/backbone-js/surfboards/index.html
@@ -14,10 +14,18 @@
         <td>Unit Price</td>
       </tr>
     </table>
+
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js"></script>
+
+    <script type="text/template" id="surfboard-template">
+      <td><%= manufacturer %></td>
+      <td><%= model %></td>
+      <td><%= stock %></td>
+      <td>$<%= unitPrice %></td>
+    </script>
 
     <!-- Main app code -->
     <script src="app.js"></script>
