--- a/javascript-framework-examples/backbone-js/contacts/index.html
+++ b/javascript-framework-examples/backbone-js/contacts/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Contacts</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <table id="table-body" border="1">
@@ -28,6 +28,7 @@
     </script>
 
     <!-- Main app code -->
+    <script src="contacts.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
