added span tags to index.html link text elements; started a basic stylesheet

--- a/css-snippets/navigation-menu/index.html
+++ b/css-snippets/navigation-menu/index.html
@@ -6,11 +6,31 @@
 	</head>
 	<body>
 		<ul id="navigation">
-			<li><a class="home" href="#">Home</a></li>
-			<li><a class="about" href="#">About</a></li>
-			<li><a class="services" href="#">Services</a></li>
-			<li><a class="portfolio" href="#">Portfolio</a></li>
-			<li><a class="contact" href="#">Contact us</a></li>
+			<li>
+				<a class="home" href="#">
+					<span>Home</span>
+				</a>
+			</li>
+			<li>
+				<a class="about" href="#">
+					<span>About</span>
+				</a>
+			</li>
+			<li>
+				<a class="services" href="#">
+					<span>Services</span>
+				</a>
+			</li>
+			<li>
+				<a class="portfolio" href="#">
+					<span>Portfolio</span>
+				</a>
+			</li>
+			<li>
+				<a class="contact" href="#">
+					<span>Contact us</span>
+				</a>
+			</li>
 		</ul>
 	</body>
 </html>
