--- a/css-snippets/navigation-menu/index.html
+++ b/css-snippets/navigation-menu/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Navigation menu</title>
+		<link rel="stylsheet" href="css/styles.css">
 	</head>
 	<body>
 		<ul id="navigation">
