fixed a type in the linkage for the CSS file; TODO/WIP: fix rendering of link items

--- a/css-snippets/navigation-menu/index.html
+++ b/css-snippets/navigation-menu/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Navigation menu</title>
-		<link rel="stylsheet" href="./css/styles.css">
+		<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	</head>
 	<body>
 		<ul id="navigation">
