created a basic horizontal nav example with hover/active CSS stylings

--- a/css-snippets/header-examples/basic/index.html
+++ b/css-snippets/header-examples/basic/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Basic Top Header</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
 
     <!-- Navigation consists of a list of links -->
     <ul>
-      <li>
+      <li class="active">
         <a href="#">Home</a>
       </li>
       <li>
@@ -21,6 +22,6 @@
         <a href="#">Contact</a>
       </li>
     </ul>
-    
+
   </body>
 </html>
